pagination dark mode fix

--- a/src/styles/prime-ng-theme/_extensions.scss
+++ b/src/styles/prime-ng-theme/_extensions.scss
@@ -37,4 +37,10 @@
     .p-datatable.p-datatable-hoverable-rows .p-datatable-tbody > tr:not(.p-highlight):hover {
         background: var(--bs-light-bg-subtle);
     }
+    .p-paginator .p-paginator-pages .p-paginator-page.p-highlight, 
+    .p-paginator .p-paginator-pages .p-paginator-page:not(.p-highlight):hover {
+        background: $gray-800;
+        border-color: $gray-800;
+        color: $gray-200;
+    }
 }
